# HTTP-Load-Balancer

./: .gitignore  CMakeLists.txt  README.md  a.out  config.txt  hello.cpp  logs.txt  serveport.py
bugs/: index.cpp
client/: a.out  http_client.cpp  http_client.hpp  readme.txt
include/: http_client.hpp  httpclient.hpp  loadbalancer.hpp  logger.hpp  minimal_httpclient.hpp
load_balancer/: load_balancer.py
server/src/: CMakeLists.txt  hello.cpp  log.txt
src/: CMakeLists.txt  http_client.cpp  http_client.h  http_client.hpp  httpclient.cpp  loadbalancer.cpp  main.cpp  minimal_httpclient.cpp  minimal_httpclient.h  minimal_httpclient.hpp
test_client/: client.cpp
test_dir/: hello.txt  index.html  serve.py
test_server/: .gitignore  hello.cpp  main.py
